--- a/2/makefile
+++ b/2/makefile
@@ -1,4 +1,4 @@
-LED1_PORT = A
+LED1_PORT = A # у меня указание пинов не православное, нужно чтобы переменная была "A2" собвственно нужно поменять условия
 LED1_PIN = 2
 LED2_PORT = A
 LED2_PIN = 4
